# AxolotlVM

./: .gitignore  Cargo.toml  README.md
asm/: Makefile  a.asm  e.asm  factorial.asm  fib.asm  function_and_list.asm  function_call.asm  lable_fib.asm  string.asm
src/: asm.rs  lib.rs  main.rs
src/builtin/: linkedlist.rs
src/frontend/: gen.rs  mod.rs  parse.rs  parser.rs  repl.rs  token.rs  tokenlizer.rs
src/vm/: bytecode.rs  machine.rs  mod.rs  object.rs  value.rs
tests/: vm_test.rs
