[package]
name = "axolotl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15"
clap = "3.2"
regex = "1.6"
bincode = "2.0.0-rc.1"
# rustyline = "10"
dialoguer = {version = "0.10.1", features = ["history"]}